Add docker, k8s manifestos, ingress and architecture documentação

--- a/docker/index.html
+++ b/docker/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Lucas Deliberal | Infra & Cloud</title>
+  <title>Lucas Deliberal | Cloud & Infra</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,7 +28,7 @@
   <div class="card">
     <h1>Infraestrutura & Cloud</h1>
     <p>Kubernetes (k3s) rodando na AWS</p>
-    <p>Docker • Linux • AWS • Redes</p>
+    <p>Docker • Linux • AWS • Redes • TLS</p>
   </div>
 </body>
 </html>
